k8s/envoy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  labels:
    app: envoy
    type: ingress
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: envoy
      type: ingress
  template:
    metadata:
      labels:
        app: envoy
        type: ingress
    spec:
      containers:
      - name: envoy
        imagePullPolicy: IfNotPresent
        image: local-envoy:latest
        ports:
        - containerPort: 9901
---
kind: Service
apiVersion: v1
metadata:
  name: envoy-ingress-svc
spec:
  type: NodePort
  selector:
    app: envoy
    type: ingress
  ports:
    - protocol: TCP
      port: 9901
      nodePort: 30000
      targetPort: 9901
