k8s/wasm-config.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config: 
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: http1
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/status"
                route:
                  cluster: simple-httpapp
          http_filters:
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              config:
                name: "my_plugin"
                root_id: "my_root_id"
                vm_config:
                  vm_id: "my_vm_id"
                  runtime: "envoy.wasm.runtime.v8"
                  code:
                    local:
                      filename: "/etc/envoy/wasm/wasm-filter.wasm"
                  allow_precompiled: true
          - name: envoy.filters.http.router
            typed_config: {} 
          access_log:
            - name: envoy.access_loggers.http_grpc
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.access_loggers.grpc.v3.HttpGrpcAccessLogConfig
                common_config:
                  log_name: simple-httpapp
                  transport_api_version: V3
                  grpc_service:
                    envoy_grpc:
                      cluster_name: envoy-als-server
                  buffer_size_bytes: 10
  clusters:
  - name: envoy-als-server
    connect_timeout: 10s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: envoy-als-server
      endpoints:
      - lb_endpoints:
        - endpoint:
           address:
             socket_address:
               port_value: 8080
               address : envoy-als-server-svc.als-server.svc.cluster.local
               ipv4_compat: true
  - name: simple-httpapp
    connect_timeout: 1s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: simple-httpapp
      endpoints:
      - lb_endpoints:
        - endpoint:
           address:
             socket_address:
               port_value: 8080
               address : simple-httpapp-v1-svc.v1
               ipv4_compat: true
        - endpoint:
           address:
             socket_address:
               port_value: 8080
               address : simple-httpapp-v2-svc.v2
               ipv4_compat: true
